--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                         <input type="email" class="form-control" placeholder="Email" id="editEmail"><br>
 
                         <label for="selDepartment">Select Department</label><br>
-                        <select name="sel-department" id="selDepartment" class="form-select" aria-label="Select Department" style="width:auto;"></select><br><br>
+                        <select name="sel-department" id="selDepartment" class="form-select selDepartment" aria-label="Select Department" style="width:auto;"></select><br><br>
 
                         <label for="editLocation">Location</label><br>
                         <input id="editLocation" type="text" readonly>
