--- a/index.html
+++ b/index.html
@@ -29,11 +29,16 @@
                         <input type="text" class="form-control" placeholder="Job Title" id="personJobTitle"><br>
                         <input type="email" class="form-control" placeholder="Email" id="personEmail"><br>
 
-                        <label for="newPersonDepartment">Select Department</label><br>
+                        <label>Select Department</label><br>
+                        <select name="sel-employeeDepartment" class="form-select employeeDepartment" aria-label="Select Department" style="width:auto;"></select><br>
+
+                        <label>Location</label><br>
+                        <input class="employeeLocation" type="text" readonly>
+                        <!-- <label for="newPersonDepartment">Select Department</label><br>
                         <select name="sel-newPersonDepartment" id="newPersonDepartment" class="form-select" aria-label="Select Department" style="width:auto;"></select><br><br>
 
                         <label for="newPersonLocation">Location</label><br>
-                        <input id="newPersonLocation" type="text" readonly>
+                        <input id="newPersonLocation" type="text" readonly> -->
 
                     </div>
 
@@ -60,11 +65,16 @@
                         <input type="text" class="form-control" placeholder="Job Title" id="editJobTitle"><br>
                         <input type="email" class="form-control" placeholder="Email" id="editEmail"><br>
 
-                        <label for="selDepartment">Select Department</label><br>
+                        <label>Select Department</label><br>
+                        <select name="sel-employeeDepartment" class="form-select employeeDepartment" aria-label="Select Department" style="width:auto;"></select><br>
+
+                        <label>Location</label><br>
+                        <input class="employeeLocation" type="text" readonly>
+                        <!-- <label for="selDepartment">Select Department</label><br>
                         <select name="sel-department" id="selDepartment" class="form-select selDepartment" aria-label="Select Department" style="width:auto;"></select><br><br>
 
                         <label for="editLocation">Location</label><br>
-                        <input id="editLocation" type="text" readonly>
+                        <input id="editLocation" type="text" readonly> -->
 
                     </div>
 
