added dataTable, needs buttons

--- a/index.html
+++ b/index.html
@@ -223,13 +223,13 @@
                 <input style="float: left;" type="button" class="btn-success" id="editDepartment" value="Edit Departments">
                 <input style="float: left;" type="button" class="btn-success" id="editLocationBtn" value="Edit Locations">
                 <br><br>
-                <table class="table table-hover table-bordered table-striped">
+                <table width="100%" class="table table-hover table-bordered table-striped">
                         <thead>
                             <tr>
-                                <td style="display: none;">Employee ID</td>
+                                <td>Employee ID</td>
                                 <td>First Name</td>
                                 <td>Last Name</td>
-                                <td style="display: none;">Job Title</td>
+                                <td>Job Title</td>
                                 <td>Email</td>
                                 <td>Department</td>
                                 <td>Location</td>
