--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
-    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.23/datatables.min.css"/>
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/dt/dt-1.10.23/b-1.6.5/r-2.2.7/sl-1.3.1/datatables.min.css"/>
+
 
     <link rel="stylesheet" href="libs/css/comDirStyles.css">
 
@@ -217,13 +218,13 @@
 
         <!--Static Content -->
         <div class="row">
-            <div class="col-md-10 col-md-offset-2">
+            <div >
                 <h2>Company Directory</h2>
                 <input style="float: left;" type="button" class="btn-success" id="addNew" value="Add Employee">
                 <input style="float: left;" type="button" class="btn-success" id="editDepartment" value="Edit Departments">
                 <input style="float: left;" type="button" class="btn-success" id="editLocationBtn" value="Edit Locations">
                 <br><br>
-                <table width="100%" class="table table-hover table-bordered table-striped">
+                <table id="table" width="100%" class="table table-hover table-bordered table-striped">
                         <thead>
                             <tr>
                                 <td>Employee ID</td>
@@ -291,7 +292,7 @@
 
     <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-    <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.23/datatables.min.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/v/dt/dt-1.10.23/b-1.6.5/r-2.2.7/sl-1.3.1/datatables.min.js"></script>
     <script src="libs/js/comDirApp.js"></script>
     
 </body>
