--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="libs/css/comDirStyles.css">
 
 
-    <title>Company Directory Practice</title>
+    <title>Company Directory</title>
 </head>
 <body>
 
