allows same department at different location

--- a/index.html
+++ b/index.html
@@ -207,6 +207,9 @@
                     <div class="modal-body">
                         <label for="deleteDepartment">Select Department to Delete</label><br>
                         <select name="sel-deleteDepartment" id="deleteDepartment" class="form-select" aria-label="Select Department" style="width:auto;"></select><br><br>
+
+                        <label>Location</label><br>
+                        <input class="employeeLocation" type="text" readonly>
                     </div>
 
                     <div class="modal-footer">
